--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@ body {
 }
 
 #topbottom {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/topbottom.png) no-repeat 0% 0%;
+	background: transparent url(
+![topbottom](https://user-images.githubusercontent.com/39221704/40914693-cd791900-6816-11e8-8a47-2a887a8ebfd3.png)
+) no-repeat 0% 0%;
 	background-position: bottom;
 	position: relative;
 	width: 905px;
