--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ LEARNBOOST
 
 <style type="text/css">
 #navbar {
-    background:url(C:/Users/Aayush/Desktop/REPLICATE/navbar.png);
+    background:url(./navbar.png);
     background-repeat: no-repeat;
     width: 100%;
     height: 69px;
@@ -128,7 +128,7 @@ body {
     overflow: hidden;
     text-shadow: 0 1px 1px rgba(0,0,0,0.40);
     margin-left: 6px;
-    background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/b2bg.png) repeat-x;
+    background: transparent url(./b2bg.png) repeat-x;
 }
 
 .b2 li a {
