--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ body {
 }
 
 #top {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/topbg.png) repeat-y 0% 0%;
+	background: transparent url(./topbg.png) repeat-y 0% 0%;
 	margin: 36px auto;
 	width: 905px;
 	height: 425px;
@@ -191,7 +191,7 @@ body {
 }
 
 #toptop {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/toptop.png) no-repeat 0% 0%;
+	background: transparent url(./toptop.png) no-repeat 0% 0%;
 	height: 20px;
 	position: relative;
 	top: -20px;
@@ -240,7 +240,7 @@ strong {
 }
 
 .signup {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/formback.png) no-repeat 0% 0%;
+	background: transparent url(./formback.png) no-repeat 0% 0%;
 	height: 355px;
 	width: 366px;
 	position: relative;
@@ -249,7 +249,7 @@ strong {
 }
 
 #video {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/video.png) no-repeat;
+	background: transparent url(./video.png) no-repeat;
 	position: relative;
 	top: -826.5px;
 	left: 122.5px;
@@ -266,7 +266,7 @@ strong {
 }
 
 #demo {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/demo.png) no-repeat;
+	background: transparent url(./demo.png) no-repeat;
 	position: relative;
 	top: -826.5px;
 	left: 127.5px;
@@ -306,7 +306,7 @@ strong {
 }
 
 #signupbody {
-	background: url(C:/Users/Aayush/Desktop/REPLICATE/form.png);
+	background: url(./form.png);
 	border: 1px solid #c3c4c4;
 	border-top-width: 0; 
 	border-bottom-left-radius: 6px; 
@@ -404,7 +404,7 @@ select {
     line-height: 31px;
     border-radius: 8px;
     box-shadow: 0 1px 0 #fff;
-    background: url(C:/Users/Aayush/Desktop/REPLICATE/select.png) no-repeat left 0,url(C:/Users/Aayush/Desktop/REPLICATE/select.png) no-repeat right -72px,url(C:/Users/Aayush/Desktop/REPLICATEselect.png) repeat-x left -36px;
+    background: url(./select.png) no-repeat left 0,url(./select.png) no-repeat right -72px,url(./select.png) repeat-x left -36px;
 }
 
 .checkbox {
@@ -426,7 +426,7 @@ select {
 .checkbox input {
 	margin: 0;
 	margin-right: 0px;
-	background: url(./Images/checkbox.png) no-repeat;
+	background: url(.s/checkbox.png) no-repeat;
 	border: none;
 	width: 15.5px;
     height: 16.5px;
@@ -456,7 +456,7 @@ select {
 .buttonbox input {
 	width: 100px;
     height: 40px;
-    background: url(C:/Users/Aayush/Desktop/REPLICATE/button.png) no-repeat top left;
+    background: url(./button.png) no-repeat top left;
     border: 1px solid #4444;
     position: relative;
     top: 7.5px;
@@ -474,7 +474,7 @@ select {
 }
 
 #bottomtop {
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/bottomtop.png) no-repeat 0% 0%;
+	background: transparent url(./bottomtop.png) no-repeat 0% 0%;
 	background-position: bottom;
 	width: 903px;
 	height: 20px;
@@ -487,7 +487,7 @@ select {
 #bottom {
 	position: relative;
 	top: -10px;
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/bottombg.png) repeat-y 0% 0%;
+	background: transparent url(./bottombg.png) repeat-y 0% 0%;
 	margin: 36px auto;
 	width: 905px;
 	height: 557px;
@@ -579,7 +579,7 @@ select {
 }
 
 #bottombottom {
-	background: transparent url(./Images/bottombottom.png) no-repeat 0% 0%;
+	background: transparent url(./bottombottom.png) no-repeat 0% 0%;
 	background-position: bottom;
 	width: 903px;
 	height: 20px;
@@ -595,7 +595,7 @@ select {
 	position: fixed;
 	top: 45vh;
 	left: 0;
-	background: transparent url(C:/Users/Aayush/Desktop/REPLICATE/feedback.png) repeat 0% 0%;
+	background: transparent url(./feedback.png) repeat 0% 0%;
 	z-index: +5;
 	cursor: pointer;
 	opacity: 0.8;
@@ -661,7 +661,7 @@ select {
 #rights a div {
 	height: 20px;
 	width: 77px;
-	background-image: url(C:/Users/Aayush/Desktop/REPLICATE/fblike.png);
+	background-image: url(./fblike.png);
 	background-size: 77px 20px;
 }
 
@@ -678,14 +678,14 @@ select {
 <body>
 <div id="navbar">
 <div id="buttons">
-<a href="#"><img src="C:\Users\Aayush\Desktop\REPLICATE\logo.png" id="pagelogo"></a>
+<a href="#"><img src=".\logo.png" id="pagelogo"></a>
 <ul class="b1">
 <li><a href="#">Tour</a></li>
 <li><a href="#">For Schools</a></li>
 <li><a href="#">Blog</a></li>
 </ul>
 <ul class="b2">
-<li><a href="#">Join Now <img src="C:\Users\Aayush\Desktop\REPLICATE\join.png"></a></li>
+<li><a href="#">Join Now <img src=".\join.png"></a></li>
 <li><a href="#">Log In</a></li>
 </ul>
 </div>
@@ -708,10 +708,10 @@ Sign Up
 
 <div id="social">
 <a href="#" class="social">
-<img src="C:\Users\Aayush\Desktop\REPLICATE/fb.png">
+<img src="./fb.png">
 </a>
 <a href="#" class="social">
-<img src="C:\Users\Aayush\Desktop\REPLICATE/google.png">
+<img src="./google.png">
 </a>
 </div>
 <div id="or">or</div>
@@ -781,7 +781,7 @@ All the software you need to manage<br>your classroom and school. <strong>Save t
 <h2><a href="#">Gradebook</a></h2>
 <p>
 	Our beautiful design and wonderful user experience makes you wonder why you've been using other gradebook software. <br>
-	<a href="#">LEARN MORE <img src="C:/Users/Aayush/Desktop/REPLICATE/learnmore.png"></a>
+	<a href="#">LEARN MORE <img src="./learnmore.png"></a>
 </p>
 </div>
 
@@ -789,7 +789,7 @@ All the software you need to manage<br>your classroom and school. <strong>Save t
 <h2><a href="#">Lesson Plans</a></h2>
 <p>
 	With LearnBoost, you can create and manage lesson plans with our fantastic visual editor. Plus it is integrated with state standards. <br>
-	<a href="#">LEARN MORE <img src="C:/Users/Aayush/Desktop/REPLICATE/learnmore.png"></a>
+	<a href="#">LEARN MORE <img src="./learnmore.png"></a>
 </p>
 </div>
 
@@ -797,12 +797,12 @@ All the software you need to manage<br>your classroom and school. <strong>Save t
 <h2><a href="#">Parent &amp; Student</a></h2>
 <p>
 Share student progress with parents and students on LearnBoost’s safe and secure platform. <br>
-<a href="#">LEARN MORE <img src="C:/Users/Aayush/Desktop/REPLICATE/learnmore.png"></a>
+<a href="#">LEARN MORE <img src="./learnmore.png"></a>
 </p>
 </div>
-		<img src="C:/Users/Aayush/Desktop/REPLICATE/gradebook.png" id="gb">
-		<img src="C:/Users/Aayush/Desktop/REPLICATE/lesson.png" id="les">
-		<img src="C:/Users/Aayush/Desktop/REPLICATE/parents.png" id="par">
+		<img src="./gradebook.png" id="gb">
+		<img src="./lesson.png" id="les">
+		<img src="./parents.png" id="par">
 </div>
 <div id="feedbackbox">
 <div id="feedback">
